# action_agent

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  BEDROCK_DEPLOYMENT.md  DEPLOYMENT.md  Dockerfile  README.md  action_agent.py  agentcore-config.yaml  chat_agent_example.py  example_usage.py  k8s-deployment.yaml  pyproject.toml  requirements.txt
